@startuml High Level Class Diagram

title High Level Class Diagram

skinparam class {
    BackgroundColor<<Library>> LightGray
}
skinparam spotChar<<Struct>> S

class QAbstractTableModel <<Library>>
class QDialog <<Library>>
class QMainWindow <<Library>>
class QTableView <<Library>>
class QWidget <<Library>>
class QSortFilterProxyModel <<Library>>

class TaskApp
class CreateTaskDlg
class TaskDetailSection
class TaskSection
class TaskTableView
class TaskTableModel
class Task <<Struct>>

QMainWindow <|-- TaskApp
QWidget <|-- TaskSection
QWidget <|-- TaskDetailSection
QTableView <|-- TaskTableView
QDialog <|-- CreateTaskDlg
QAbstractTableModel <|-- TaskTableModel

TaskApp *-- TaskDetailSection
TaskApp *-- TaskSection

TaskSection *-- TaskTableView
TaskSection *-- TaskTableModel
TaskSection *-- CreateTaskDlg
TaskSection *-- QSortFilterProxyModel

QSortFilterProxyModel -o TaskTableView
TaskTableModel -o QSortFilterProxyModel

TaskTableModel *-- Task

@enduml
